<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Folder</string>
    <string name="format_filter_all">All</string>
    <string name="format_filter_document">Documents</string>
    <string name="format_filter_picture">Pictures</string>
    <string name="format_filter_music">Audios/Videos</string>
    <string name="format_filter_video">Videos</string>
    <string name="format_filter_wb">Whiteboard</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="word">DOC</string>
    <string name="excel">XLS</string>
    <string name="ppt">PPT</string>
    <string name="pdf">PDF</string>
    <string name="search">Search</string>
    <string name="search_result">Search results</string>
    <string name="delete">Delete</string>
    <string name="success">" Delete successfully "</string>
    <string name="copy_to">Copy to</string>
    <string name="operation">Document operation</string>
    <string name="folder_empty">No existing file</string>
    <string name="all">All</string>
    <string name="message_exit">Press again to exit</string>
    <string name="message_no_permission">Insufficient authority</string>
    <string name="message_paste">Paste successfully</string>
    <string name="message_paste2">Paste files</string>
    <string name="message_paste3">"1 file with same name already exists, do you want to replace it?"</string>
    <string name="message_paste_plural">"%d files with same name already exists, do you want to replace it?"</string>
    <string name="message_paste4">Please copy files in advance</string>
    <string name="message_no_file_selected">No file selected, unable to finish operation</string>
    <string name="message_failure">Fail</string>
    <string name="message_scan"> Scanning…</string>
    <string name="message_no_storage"> Storage device not found. </string>
    <string name="no_usb">None</string>
    <string name="paste_loading">Pasting… please wait…</string>
    <string name="not_paste">Unable to copy files in current folder</string>
    <string name="copy_file">Duplicate</string>
    <string name="space_not_enough">Insufficient remaining space</string>
    <string name="system_files">System files</string>
    <string name="file_broawser">Folder</string>
    <string name="delete_file_selected">Confirm to delete the selected files？</string>
    <string name="list">List</string>
    <string name="thumbnails">Grid</string>
    <string name="please_input_keyword">Please input the keyword...</string>
    <string name="image_loader_rotate">Rotate</string>
    <string name="image_loader_exit">Exit</string>
</resources>