<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_layout_height"
    android:background="@drawable/bottom_background" >

    <com.hht.widget.CusImageButton
        android:id="@+id/file_operation"
        android:layout_width="@dimen/bottom_layout_btn_width"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        custom:title="@string/operation"
        custom:secondTitle="@android:string/cancel"/>

    <LinearLayout
        android:id="@+id/file_operation_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/file_operation"
        android:orientation="horizontal"
        android:visibility="gone" >

        <com.hht.widget.CusImageButton
            android:id="@+id/file_all"
            android:layout_width="@dimen/bottom_layout_btn_width"
            android:layout_height="match_parent"
            android:gravity="center"
            custom:title="@android:string/selectAll"/>

        <com.hht.widget.CusImageButton
            android:id="@+id/file_copy"
            android:layout_width="@dimen/bottom_layout_btn_width"
            android:layout_height="match_parent"
            android:gravity="center"
            custom:title="@android:string/copy" />

        <com.hht.widget.CusImageButton
            android:id="@+id/file_delete"
            android:layout_width="@dimen/bottom_layout_btn_width"
            android:layout_height="match_parent"
            android:gravity="center"
            custom:title="@string/delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/copy_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/file_operation_layout"
        android:orientation="horizontal"
        android:visibility="gone" >

        <com.hht.widget.CusImageButton
            android:id="@+id/btn_pause"
            android:layout_width="@dimen/bottom_layout_btn_width"
            android:layout_height="match_parent"
            android:gravity="center"
            custom:title="@android:string/paste" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        >

        <com.hht.widget.CusImageButton
            android:id="@+id/files_list_type"
            android:layout_width="@dimen/bottom_layout_list_width"
            android:layout_height="match_parent"
            android:orientation="vertical"
            custom:image="@drawable/btn_list_type"
            custom:title="@string/list"
            />

        <com.hht.widget.CusImageButton
            android:id="@+id/files_grid_type"
            android:layout_width="@dimen/bottom_layout_list_width"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/bottom_layout_grid_marginRight"
            android:orientation="vertical"
            custom:image="@drawable/btn_grid_type"
            custom:title="@string/thumbnails"
            />
    </LinearLayout>

</RelativeLayout>